[gd_scene load_steps=43 format=3 uid="uid://rwrhuvtwbrjs"]

[ext_resource type="Script" uid="uid://rup5oow6s5bh" path="res://Scripts/Player/Player.gd" id="1_4doc1"]
[ext_resource type="Shader" uid="uid://d2jyy5lajx1yy" path="res://Shaders/canela.gdshader" id="1_bt5cy"]
[ext_resource type="Texture2D" uid="uid://clhh3h1korfos" path="res://Sprites/Characters/Canela/A00Wait1.png" id="1_jnsyv"]
[ext_resource type="Script" uid="uid://ckyu2wqkse4qx" path="res://Scripts/State Machine/StateMachine.gd" id="3_erowd"]
[ext_resource type="Script" uid="uid://dn5hntoj886r0" path="res://Scripts/AnimSys/AnimSys.gd" id="3_kb4ol"]
[ext_resource type="Script" uid="uid://dtj8na0fxumeu" path="res://Scripts/AnimSys/anim.gd" id="3_pqjug"]
[ext_resource type="Script" uid="uid://ev30n5e6lolv" path="res://Scripts/Player/States/wait.gd" id="4_lc8e2"]
[ext_resource type="Texture2D" uid="uid://baik0081p18ch" path="res://Sprites/Characters/Canela/A06EscapeS.png" id="5_6nw8g"]
[ext_resource type="Script" uid="uid://cuitjfxtpvv35" path="res://Scripts/Player/States/punch_left.gd" id="5_7eoxh"]
[ext_resource type="Script" uid="uid://cr8tvqg6tu4t4" path="res://Scripts/Player/States/punch_right.gd" id="6_percg"]
[ext_resource type="Texture2D" uid="uid://dttawxjm8ihjw" path="res://Sprites/Characters/Canela/A01AttackLw.png" id="7_jvtlk"]
[ext_resource type="Script" uid="uid://dva2tumnxtsxl" path="res://Scripts/Player/States/upper_left.gd" id="7_wt0k2"]
[ext_resource type="Texture2D" uid="uid://bippp2l15igaw" path="res://Sprites/Characters/Canela/A11AttackLwMiss.png" id="8_ced0o"]
[ext_resource type="Script" uid="uid://cu8c6iggne34k" path="res://Scripts/Player/States/upper_right.gd" id="8_t0h8o"]
[ext_resource type="Script" uid="uid://dcgmi2t5ftg3r" path="res://Scripts/Player/States/dodge_left.gd" id="9_as63s"]
[ext_resource type="Texture2D" uid="uid://boq743j85rlov" path="res://Sprites/Characters/Canela/A02AttackHi.png" id="10_2y6bg"]
[ext_resource type="Script" uid="uid://852yuq20vlgg" path="res://Scripts/Player/States/dodge_right.gd" id="10_tybw1"]
[ext_resource type="Texture2D" uid="uid://deve8igilovtm" path="res://Sprites/Characters/Canela/A12AttackHiMiss.png" id="11_fgl15"]
[ext_resource type="Script" uid="uid://bh6g16pyeg1e7" path="res://Scripts/Player/States/dodge_down.gd" id="11_hviaj"]
[ext_resource type="Script" uid="uid://7cen84ioqv1l" path="res://Scripts/Player/States/punch_left_finish.gd" id="12_e6lha"]
[ext_resource type="Script" uid="uid://1j6yuk63fqx" path="res://Scripts/Player/States/punch_right_finish.gd" id="13_fttoh"]
[ext_resource type="Texture2D" uid="uid://bkorethyifmk0" path="res://Sprites/Characters/Canela/A10Block.png" id="14_5pwl5"]
[ext_resource type="Script" uid="uid://beq0rbuehmlav" path="res://Scripts/Player/States/upper_left_finish.gd" id="14_uqau8"]
[ext_resource type="Script" uid="uid://vj8samna2u4j" path="res://Scripts/Player/States/upper_right_finish.gd" id="15_kma7x"]
[ext_resource type="Texture2D" uid="uid://jhgkd5krxdf0" path="res://Sprites/Characters/Canela/A07DamageS.png" id="15_w4r7k"]
[ext_resource type="Script" uid="uid://5dc4w8mn67tc" path="res://Scripts/Player/States/punch_left_counter.gd" id="16_ssc2a"]
[ext_resource type="Script" uid="uid://bc5csndxstwah" path="res://Scripts/Player/States/punch_right_counter.gd" id="17_nmrpu"]
[ext_resource type="Script" uid="uid://tm6qjwd141pr" path="res://Scripts/Player/States/upper_left_counter.gd" id="18_43xfr"]
[ext_resource type="Script" uid="uid://bjuoqm0i5svbv" path="res://Scripts/Player/States/upper_right_counter.gd" id="19_2ngs3"]
[ext_resource type="Script" uid="uid://dykye0a0rqgni" path="res://Scripts/Player/States/DamageN.gd" id="20_bfnwb"]
[ext_resource type="Script" uid="uid://cp1xj3ad41xxm" path="res://Scripts/Player/States/super_punch_lw.gd" id="21_ppqjl"]
[ext_resource type="Script" uid="uid://d26b5imtxwqa5" path="res://Scripts/Player/States/damage_s.gd" id="22_im3km"]
[ext_resource type="Script" uid="uid://bgioi3xsxaff7" path="res://Scripts/Player/States/block.gd" id="23_a22ns"]
[ext_resource type="Script" uid="uid://dhesfbi5m5gem" path="res://Scripts/Player/States/block_damage.gd" id="24_y2cwy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yu04f"]
shader = ExtResource("1_bt5cy")
shader_parameter/find_color = Color(1, 0, 0, 1)
shader_parameter/find_color2 = Color(0, 1, 0, 1)
shader_parameter/find_color3 = Color(1, 1, 0, 1)
shader_parameter/find_color4 = Color(0, 0, 1, 1)
shader_parameter/find_color5 = Color(1, 0, 1, 1)
shader_parameter/find_color6 = Color(0, 1, 1, 1)
shader_parameter/find_color7 = Color(1, 0.50980395, 0, 1)
shader_parameter/find_color8 = Color(1, 0, 0.5882353, 1)
shader_parameter/find_color9 = Color(0.7254902, 0.39215687, 0.7254902, 1)
shader_parameter/find_color10 = Color(0.30980393, 0, 0.2901961, 1)
shader_parameter/find_color11 = Color(0, 0.39215687, 0, 1)
shader_parameter/separator = Color(0, 0, 0, 1)
shader_parameter/target_color = Color(1, 0.6627451, 0.9254902, 1)
shader_parameter/target_color2 = Color(0.039215688, 0.92156863, 0.8627451, 1)
shader_parameter/target_color3 = Color(0.40392157, 0.6, 0.5921569, 1)
shader_parameter/target_color4 = Color(0.19607843, 0.3137255, 0.39215687, 1)
shader_parameter/target_color5 = Color(0.40392157, 0.6, 0.5921569, 1)
shader_parameter/target_color6 = Color(0.19607843, 0.3137255, 0.39215687, 1)
shader_parameter/target_color7 = Color(0.2784314, 0.36078432, 0.39215687, 1)
shader_parameter/target_color8 = Color(0.2784314, 0.36078432, 0.39215687, 1)
shader_parameter/target_color9 = Color(0.7254902, 0.38431373, 0.7411765, 1)
shader_parameter/target_color10 = Color(0.41960785, 0.23529412, 0.53333336, 1)
shader_parameter/target_color11 = Color(0.22745098, 0.54509807, 0.69411767, 1)

[sub_resource type="Resource" id="Resource_6nj50"]
metadata/__load_path__ = "res://Sprites/Characters/Canela/A04EscapeN.png"

[sub_resource type="Resource" id="Resource_5pwl5"]
metadata/__load_path__ = "res://Sprites/Characters/Canela/A03AttackLw4.png"

[sub_resource type="Resource" id="Resource_w4r7k"]
metadata/__load_path__ = "res://Sprites/Characters/Canela/A03AttackLw4.png"

[sub_resource type="Resource" id="Resource_01clt"]
metadata/__load_path__ = "res://Sprites/Characters/Canela/A05AttackHi4.png"

[sub_resource type="Resource" id="Resource_fytr6"]
metadata/__load_path__ = "res://Sprites/Characters/Canela/A05AttackHi4.png"

[sub_resource type="Resource" id="Resource_bt5cy"]
metadata/__load_path__ = "res://Sprites/Characters/Canela/A08AttackSuperLw.png"

[sub_resource type="Resource" id="Resource_1jx2i"]
metadata/__load_path__ = "res://Sprites/Characters/Canela/A09DamageN.png"

[node name="Player" type="Sprite2D" node_paths=PackedStringArray("animSys")]
process_mode = 1
z_index = 2
texture_filter = 1
material = SubResource("ShaderMaterial_yu04f")
texture = ExtResource("5_6nw8g")
hframes = 7
vframes = 3
frame = 7
script = ExtResource("1_4doc1")
animSys = NodePath("AnimSys")

[node name="AnimSys" type="Node" parent="."]
script = ExtResource("3_kb4ol")

[node name="Wait" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
loop = true
spriteSheet = ExtResource("1_jnsyv")
frames = 5
frameTimes = Array[int]([7, 7, 7, 7, 7])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="DodgeSide" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = ExtResource("5_6nw8g")
frames = 21
columns = 3
frameTimes = Array[int]([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 3, 3, 4, 5, 6])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="DodgeDown" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = SubResource("Resource_6nj50")
frames = 21
columns = 3
frameTimes = Array[int]([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 3, 3, 4, 5, 6])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="PunchLow" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = ExtResource("7_jvtlk")
frames = 7
frameTimes = Array[int]([1, 1, 1, 1, 10, 6, 8])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="PunchLowMiss" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = ExtResource("8_ced0o")
frames = 3
rows = 3
frameTimes = Array[int]([8, 6, 6])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="PunchLowCounter" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = SubResource("Resource_5pwl5")
initialFrame = 5
frames = 11
columns = 2
frameTimes = Array[int]([0, 0, 0, 0, 5, 1, 1, 11, 6, 5, 6])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="PunchLowFinisher" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = SubResource("Resource_w4r7k")
frames = 11
columns = 2
frameTimes = Array[int]([1, 1, 1, 1, 5, 1, 1, 11, 6, 5, 6])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="PunchHigh" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = ExtResource("10_2y6bg")
frames = 7
frameTimes = Array[int]([1, 1, 1, 1, 10, 6, 8])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="PunchHighMiss" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = ExtResource("11_fgl15")
frames = 5
rows = 5
frameTimes = Array[int]([6, 7, 2, 5, 5])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="PunchHighCounter" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = SubResource("Resource_01clt")
initialFrame = 5
frames = 11
columns = 2
frameTimes = Array[int]([0, 0, 0, 0, 5, 1, 1, 11, 6, 5, 6])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="PunchHighFinisher" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = SubResource("Resource_fytr6")
frames = 11
columns = 2
frameTimes = Array[int]([1, 1, 1, 1, 5, 1, 1, 11, 6, 5, 6])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="SuperPunchLow" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = SubResource("Resource_bt5cy")
frames = 14
columns = 2
frameTimes = Array[int]([3, 3, 3, 3, 3, 3, 2, 1, 4, 6, 7, 7, 7, 7])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="Block" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
loop = true
spriteSheet = ExtResource("14_5pwl5")
frames = 5
columns = 2
frameTimes = Array[int]([8, 8, 8, 8, 8])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="BlockDamage" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = ExtResource("14_5pwl5")
initialFrame = 6
frames = 14
columns = 2
frameTimes = Array[int]([0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 2, 2, 2, 2])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="BlockEnd" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = ExtResource("14_5pwl5")
initialFrame = 10
frames = 14
columns = 2
frameTimes = Array[int]([0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 2, 2, 2, 2])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="DamageS" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = ExtResource("15_w4r7k")
frames = 16
columns = 3
posX = 250.0
frameTimes = Array[int]([2, 2, 1, 2, 2, 2, 4, 4, 3, 2, 2, 2, 2, 2, 2, 2])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="DamageN" type="Node" parent="AnimSys"]
script = ExtResource("3_pqjug")
spriteSheet = SubResource("Resource_1jx2i")
frames = 14
columns = 2
frameTimes = Array[int]([2, 3, 3, 5, 5, 5, 4, 4, 2, 2, 2, 2, 2, 2])
metadata/_custom_type_script = "uid://dtj8na0fxumeu"

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_erowd")
initial_state = NodePath("Wait")

[node name="Wait" type="Node" parent="StateMachine"]
script = ExtResource("4_lc8e2")

[node name="PunchLeft" type="Node" parent="StateMachine"]
script = ExtResource("5_7eoxh")

[node name="PunchRight" type="Node" parent="StateMachine"]
script = ExtResource("6_percg")

[node name="UpperLeft" type="Node" parent="StateMachine"]
script = ExtResource("7_wt0k2")

[node name="UpperRight" type="Node" parent="StateMachine"]
script = ExtResource("8_t0h8o")

[node name="DodgeLeft" type="Node" parent="StateMachine"]
script = ExtResource("9_as63s")

[node name="DodgeRight" type="Node" parent="StateMachine"]
script = ExtResource("10_tybw1")

[node name="DodgeDown" type="Node" parent="StateMachine"]
script = ExtResource("11_hviaj")

[node name="PunchLeftFinish" type="Node" parent="StateMachine"]
script = ExtResource("12_e6lha")

[node name="PunchRightFinish" type="Node" parent="StateMachine"]
script = ExtResource("13_fttoh")

[node name="UpperLeftFinish" type="Node" parent="StateMachine"]
script = ExtResource("14_uqau8")

[node name="UpperRightFinish" type="Node" parent="StateMachine"]
script = ExtResource("15_kma7x")

[node name="PunchLeftCounter" type="Node" parent="StateMachine"]
script = ExtResource("16_ssc2a")

[node name="PunchRightCounter" type="Node" parent="StateMachine"]
script = ExtResource("17_nmrpu")

[node name="UpperLeftCounter" type="Node" parent="StateMachine"]
script = ExtResource("18_43xfr")

[node name="UpperRightCounter" type="Node" parent="StateMachine"]
script = ExtResource("19_2ngs3")

[node name="DamageS" type="Node" parent="StateMachine"]
script = ExtResource("22_im3km")

[node name="SuperPunchLw" type="Node" parent="StateMachine"]
script = ExtResource("21_ppqjl")

[node name="DamageN" type="Node" parent="StateMachine"]
script = ExtResource("20_bfnwb")

[node name="Block" type="Node" parent="StateMachine"]
script = ExtResource("23_a22ns")

[node name="BlockDamage" type="Node" parent="StateMachine"]
script = ExtResource("24_y2cwy")

[node name="DebugUI" type="CanvasLayer" parent="."]

[node name="Player1Side" type="Label" parent="DebugUI"]
offset_left = 28.0
offset_top = 742.0
offset_right = 135.0
offset_bottom = 817.0
theme_override_constants/outline_size = 15
text = "State:
StateFrame: 0
ctrl: 0
"

[node name="Player1Side2" type="Label" parent="DebugUI"]
offset_left = 249.0
offset_top = 742.0
offset_right = 356.0
offset_bottom = 817.0
theme_override_constants/outline_size = 15
text = "State:
StateFrame: 0
ctrl: 0
"

[node name="Player2Side" type="Label" parent="DebugUI"]
offset_left = 1757.0
offset_top = 627.0
offset_right = 1864.0
offset_bottom = 702.0
theme_override_constants/outline_size = 15
text = "State:
StateFrame: 0
ctrl: 0
"

[node name="FPS" type="Label" parent="DebugUI"]
offset_right = 40.0
offset_bottom = 23.0
text = "FPS: 60"
